--- a/Makefile_2
+++ b/Makefile_2
@@ -3,16 +3,14 @@
 
 ARCHIVOS_ENTREGAR= obligatorio2.c bits.c bits.h libHuf.c libHuf.h Makefile
 
-.PHONY: entrega all
-
-all : libbits.a libHuf.a obligatorio2 
+all : libbits.a libHuf.a obligatorio2_b entrega
 
 COPT = -I./ -Wall -ansi -ggdb
 LDFLAGS = -L ./
 LDLIBS = -lHuf -lbits -lm
 
-obligatorio2: obligatorio2.o libbits.a libHuf.a
-	cc $(COPT) -o $@ obligatorio2.o $(LDFLAGS) $(LDLIBS)
+obligatorio2_b: obligatorio2_b.o libbits.a libHuf.a
+	cc $(COPT) -o $@ obligatorio2_b.o $(LDFLAGS) $(LDLIBS)
 
 .c.o:
 	cc $(COPT) -c $<
@@ -30,4 +28,5 @@ clean:
 
 entrega: obligatorio2 bits.o  libHuf.o
 	zip  alberto_DANIEL_SANCHEZ_LATRONICO.zip   $(ARCHIVOS_ENTREGAR)
+	touch entrega
 
